--- a/note.html
+++ b/note.html
@@ -228,7 +228,7 @@
                     </span>
                     
                     <div id="testa" ><a href="index.html" style="color: white !important; text-decoration: none;">다시 돌리기</a></div>
-                    <div id="testa1" ><a href="index.html" style="color: white !important; text-decoration: none;">일기 모음</a></div>
+                    <div id="testa1" ><a href="http://notedd.iptime.org:8080/BBS/bbs.jsp" style="color: white !important; text-decoration: none;">일기 모음</a></div>
                 </div>
             </div>
 
